@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,12 +21,13 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+import javax.inject.Inject;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.transform.TransformerFactory;
 import javax.xml.transform.dom.DOMSource;
@@ -47,24 +48,20 @@ import org.gradle.api.Project;
 import org.gradle.api.Task;
 import org.gradle.api.artifacts.Configuration;
 import org.gradle.api.artifacts.dsl.DependencyHandler;
+import org.gradle.api.model.ObjectFactory;
 import org.gradle.api.plugins.JavaPlatformPlugin;
 import org.gradle.api.publish.maven.tasks.GenerateMavenPom;
 import org.gradle.api.tasks.Sync;
 import org.gradle.api.tasks.TaskExecutionException;
-import org.gradle.util.ConfigureUtil;
 import org.w3c.dom.Document;
 import org.w3c.dom.NodeList;
 
 import org.springframework.boot.build.DeployedPlugin;
-import org.springframework.boot.build.bom.Library.DependencyConstraintsDependencyVersions;
-import org.springframework.boot.build.bom.Library.DependencyLockDependencyVersions;
-import org.springframework.boot.build.bom.Library.DependencyVersions;
 import org.springframework.boot.build.bom.Library.Exclusion;
 import org.springframework.boot.build.bom.Library.Group;
 import org.springframework.boot.build.bom.Library.LibraryVersion;
 import org.springframework.boot.build.bom.Library.Module;
 import org.springframework.boot.build.bom.Library.ProhibitedVersion;
-import org.springframework.boot.build.bom.Library.VersionAlignment;
 import org.springframework.boot.build.bom.bomr.version.DependencyVersion;
 import org.springframework.boot.build.mavenplugin.MavenExec;
 import org.springframework.util.FileCopyUtils;
@@ -82,7 +79,7 @@ public class BomExtension {
 
 	private final List<Library> libraries = new ArrayList<>();
 
-	private final UpgradeHandler upgradeHandler = new UpgradeHandler();
+	private final UpgradeHandler upgradeHandler;
 
 	private final DependencyHandler dependencyHandler;
 
@@ -90,6 +87,7 @@ public class BomExtension {
 
 	public BomExtension(DependencyHandler dependencyHandler, Project project) {
 		this.dependencyHandler = dependencyHandler;
+		this.upgradeHandler = project.getObjects().newInstance(UpgradeHandler.class);
 		this.project = project;
 	}
 
@@ -97,8 +95,8 @@ public class BomExtension {
 		return this.libraries;
 	}
 
-	public void upgrade(Closure<?> closure) {
-		ConfigureUtil.configure(closure, this.upgradeHandler);
+	public void upgrade(Action<UpgradeHandler> action) {
+		action.execute(this.upgradeHandler);
 	}
 
 	public Upgrade getUpgrade() {
@@ -106,54 +104,55 @@ public class BomExtension {
 				this.upgradeHandler.gitHub.repository, this.upgradeHandler.gitHub.issueLabels));
 	}
 
-	public void library(String name, Closure<?> closure) {
-		this.library(name, null, closure);
+	public void library(String name, Action<LibraryHandler> action) {
+		library(name, null, action);
 	}
 
-	public void library(String name, String version, Closure<?> closure) {
-		LibraryHandler libraryHandler = new LibraryHandler(version);
-		ConfigureUtil.configure(closure, libraryHandler);
-		LibraryVersion libraryVersion = new LibraryVersion(DependencyVersion.parse(libraryHandler.version),
-				libraryHandler.versionAlignment);
-		addLibrary(new Library(name, libraryVersion, libraryHandler.groups, libraryHandler.prohibitedVersions,
-				libraryHandler.dependencyVersions));
+	public void library(String name, String version, Action<LibraryHandler> action) {
+		ObjectFactory objects = this.project.getObjects();
+		LibraryHandler libraryHandler = objects.newInstance(LibraryHandler.class, (version != null) ? version : "");
+		action.execute(libraryHandler);
+		LibraryVersion libraryVersion = new LibraryVersion(DependencyVersion.parse(libraryHandler.version));
+		addLibrary(new Library(name, libraryVersion, libraryHandler.groups, libraryHandler.prohibitedVersions));
 	}
 
 	public void effectiveBomArtifact() {
 		Configuration effectiveBomConfiguration = this.project.getConfigurations().create("effectiveBom");
-		this.project.getTasks().matching((task) -> task.getName().equals(DeployedPlugin.GENERATE_POM_TASK_NAME))
-				.all((task) -> {
-					Sync syncBom = this.project.getTasks().create("syncBom", Sync.class);
-					syncBom.dependsOn(task);
-					File generatedBomDir = new File(this.project.getBuildDir(), "generated/bom");
-					syncBom.setDestinationDir(generatedBomDir);
-					syncBom.from(((GenerateMavenPom) task).getDestination(), (pom) -> pom.rename((name) -> "pom.xml"));
-					try {
-						String settingsXmlContent = FileCopyUtils
-								.copyToString(new InputStreamReader(
-										getClass().getClassLoader().getResourceAsStream("effective-bom-settings.xml"),
-										StandardCharsets.UTF_8))
-								.replace("localRepositoryPath",
-										new File(this.project.getBuildDir(), "local-m2-repository").getAbsolutePath());
-						syncBom.from(this.project.getResources().getText().fromString(settingsXmlContent),
-								(settingsXml) -> settingsXml.rename((name) -> "settings.xml"));
-					}
-					catch (IOException ex) {
-						throw new GradleException("Failed to prepare settings.xml", ex);
-					}
-					MavenExec generateEffectiveBom = this.project.getTasks().create("generateEffectiveBom",
-							MavenExec.class);
-					generateEffectiveBom.setProjectDir(generatedBomDir);
-					File effectiveBom = new File(this.project.getBuildDir(),
-							"generated/effective-bom/" + this.project.getName() + "-effective-bom.xml");
-					generateEffectiveBom.args("--settings", "settings.xml", "help:effective-pom",
-							"-Doutput=" + effectiveBom);
-					generateEffectiveBom.dependsOn(syncBom);
-					generateEffectiveBom.getOutputs().file(effectiveBom);
-					generateEffectiveBom.doLast(new StripUnrepeatableOutputAction(effectiveBom));
-					this.project.getArtifacts().add(effectiveBomConfiguration.getName(), effectiveBom,
+		this.project.getTasks()
+			.matching((task) -> task.getName().equals(DeployedPlugin.GENERATE_POM_TASK_NAME))
+			.all((task) -> {
+				Sync syncBom = this.project.getTasks().create("syncBom", Sync.class);
+				syncBom.dependsOn(task);
+				File generatedBomDir = new File(this.project.getBuildDir(), "generated/bom");
+				syncBom.setDestinationDir(generatedBomDir);
+				syncBom.from(((GenerateMavenPom) task).getDestination(), (pom) -> pom.rename((name) -> "pom.xml"));
+				try {
+					String settingsXmlContent = FileCopyUtils
+						.copyToString(new InputStreamReader(
+								getClass().getClassLoader().getResourceAsStream("effective-bom-settings.xml"),
+								StandardCharsets.UTF_8))
+						.replace("localRepositoryPath",
+								new File(this.project.getBuildDir(), "local-m2-repository").getAbsolutePath());
+					syncBom.from(this.project.getResources().getText().fromString(settingsXmlContent),
+							(settingsXml) -> settingsXml.rename((name) -> "settings.xml"));
+				}
+				catch (IOException ex) {
+					throw new GradleException("Failed to prepare settings.xml", ex);
+				}
+				MavenExec generateEffectiveBom = this.project.getTasks()
+					.create("generateEffectiveBom", MavenExec.class);
+				generateEffectiveBom.setProjectDir(generatedBomDir);
+				File effectiveBom = new File(this.project.getBuildDir(),
+						"generated/effective-bom/" + this.project.getName() + "-effective-bom.xml");
+				generateEffectiveBom.args("--settings", "settings.xml", "help:effective-pom",
+						"-Doutput=" + effectiveBom);
+				generateEffectiveBom.dependsOn(syncBom);
+				generateEffectiveBom.getOutputs().file(effectiveBom);
+				generateEffectiveBom.doLast(new StripUnrepeatableOutputAction(effectiveBom));
+				this.project.getArtifacts()
+					.add(effectiveBomConfiguration.getName(), effectiveBom,
 							(artifact) -> artifact.builtBy(generateEffectiveBom));
-				});
+			});
 	}
 
 	private String createDependencyNotation(String groupId, String artifactId, DependencyVersion version) {
@@ -192,8 +191,9 @@ public class BomExtension {
 		for (Group group : library.getGroups()) {
 			for (Module module : group.getModules()) {
 				putArtifactVersionProperty(group.getId(), module.getName(), module.getClassifier(), versionProperty);
-				this.dependencyHandler.getConstraints().add(JavaPlatformPlugin.API_CONFIGURATION_NAME,
-						createDependencyNotation(group.getId(), module.getName(), library.getVersion().getVersion()));
+				this.dependencyHandler.getConstraints()
+					.add(JavaPlatformPlugin.API_CONFIGURATION_NAME, createDependencyNotation(group.getId(),
+							module.getName(), library.getVersion().getVersion()));
 			}
 			for (String bomImport : group.getBoms()) {
 				putArtifactVersionProperty(group.getId(), bomImport, versionProperty);
@@ -215,58 +215,73 @@ public class BomExtension {
 
 		private String version;
 
-		private VersionAlignment versionAlignment;
-
-		private DependencyVersions dependencyVersions;
-
+		@Inject
 		public LibraryHandler(String version) {
 			this.version = version;
 		}
 
-		public void version(String version, Closure<?> closure) {
+		public void version(String version) {
 			this.version = version;
-			VersionHandler versionHandler = new VersionHandler();
-			ConfigureUtil.configure(closure, versionHandler);
-			this.versionAlignment = new VersionAlignment(versionHandler.libraryName);
 		}
 
-		public void group(String id, Closure<?> closure) {
+		public void group(String id, Action<GroupHandler> action) {
 			GroupHandler groupHandler = new GroupHandler(id);
-			ConfigureUtil.configure(closure, groupHandler);
+			action.execute(groupHandler);
 			this.groups
-					.add(new Group(groupHandler.id, groupHandler.modules, groupHandler.plugins, groupHandler.imports));
+				.add(new Group(groupHandler.id, groupHandler.modules, groupHandler.plugins, groupHandler.imports));
 		}
 
-		public void prohibit(String range, Closure<?> closure) {
-			ProhibitedVersionHandler prohibitedVersionHandler = new ProhibitedVersionHandler();
-			ConfigureUtil.configure(closure, prohibitedVersionHandler);
-			try {
-				this.prohibitedVersions.add(new ProhibitedVersion(VersionRange.createFromVersionSpec(range),
-						prohibitedVersionHandler.reason));
-			}
-			catch (InvalidVersionSpecificationException ex) {
-				throw new InvalidUserCodeException("Invalid version range", ex);
-			}
+		public void prohibit(Action<ProhibitedHandler> action) {
+			ProhibitedHandler handler = new ProhibitedHandler();
+			action.execute(handler);
+			this.prohibitedVersions.add(new ProhibitedVersion(handler.versionRange, handler.startsWith,
+					handler.endsWith, handler.contains, handler.reason));
 		}
 
-		public void dependencyVersions(Closure<?> closure) {
-			DependencyVersionsHandler dependencyVersionsHandler = new DependencyVersionsHandler();
-			ConfigureUtil.configure(closure, dependencyVersionsHandler);
-		}
-
-		public static class VersionHandler {
-
-			private String libraryName;
-
-			public void shouldAlignWithVersionFrom(String libraryName) {
-				this.libraryName = libraryName;
-			}
-
-		}
-
-		public static class ProhibitedVersionHandler {
+		public static class ProhibitedHandler {
 
 			private String reason;
+
+			private final List<String> startsWith = new ArrayList<>();
+
+			private final List<String> endsWith = new ArrayList<>();
+
+			private final List<String> contains = new ArrayList<>();
+
+			private VersionRange versionRange;
+
+			public void versionRange(String versionRange) {
+				try {
+					this.versionRange = VersionRange.createFromVersionSpec(versionRange);
+				}
+				catch (InvalidVersionSpecificationException ex) {
+					throw new InvalidUserCodeException("Invalid version range", ex);
+				}
+			}
+
+			public void startsWith(String startsWith) {
+				this.startsWith.add(startsWith);
+			}
+
+			public void startsWith(Collection<String> startsWith) {
+				this.startsWith.addAll(startsWith);
+			}
+
+			public void endsWith(String endsWith) {
+				this.endsWith.add(endsWith);
+			}
+
+			public void endsWith(Collection<String> endsWith) {
+				this.endsWith.addAll(endsWith);
+			}
+
+			public void contains(String contains) {
+				this.contains.add(contains);
+			}
+
+			public void contains(List<String> contains) {
+				this.contains.addAll(contains);
+			}
 
 			public void because(String because) {
 				this.reason = because;
@@ -290,8 +305,8 @@ public class BomExtension {
 
 			public void setModules(List<Object> modules) {
 				this.modules = modules.stream()
-						.map((input) -> (input instanceof Module) ? (Module) input : new Module((String) input))
-						.collect(Collectors.toList());
+					.map((input) -> (input instanceof Module module) ? module : new Module((String) input))
+					.toList();
 			}
 
 			public void setImports(List<String> imports) {
@@ -305,9 +320,11 @@ public class BomExtension {
 			public Object methodMissing(String name, Object args) {
 				if (args instanceof Object[] && ((Object[]) args).length == 1) {
 					Object arg = ((Object[]) args)[0];
-					if (arg instanceof Closure) {
+					if (arg instanceof Closure<?> closure) {
 						ModuleHandler moduleHandler = new ModuleHandler();
-						ConfigureUtil.configure((Closure<?>) arg, moduleHandler);
+						closure.setResolveStrategy(Closure.DELEGATE_FIRST);
+						closure.setDelegate(moduleHandler);
+						closure.call(moduleHandler);
 						return new Module(name, moduleHandler.type, moduleHandler.classifier, moduleHandler.exclusions);
 					}
 				}
@@ -338,29 +355,6 @@ public class BomExtension {
 
 		}
 
-		public class DependencyVersionsHandler {
-
-			public void extractFrom(Closure<?> closure) {
-				ExtractFromHandler extractFromHandler = new ExtractFromHandler();
-				ConfigureUtil.configure(closure, extractFromHandler);
-			}
-
-			public class ExtractFromHandler {
-
-				public void dependencyLock(String location) {
-					LibraryHandler.this.dependencyVersions = new DependencyLockDependencyVersions(location,
-							LibraryHandler.this.version);
-				}
-
-				public void dependencyConstraints(String location) {
-					LibraryHandler.this.dependencyVersions = new DependencyConstraintsDependencyVersions(location,
-							LibraryHandler.this.version);
-				}
-
-			}
-
-		}
-
 	}
 
 	public static class UpgradeHandler {
@@ -373,8 +367,8 @@ public class BomExtension {
 			this.upgradePolicy = upgradePolicy;
 		}
 
-		public void gitHub(Closure<?> closure) {
-			ConfigureUtil.configure(closure, this.gitHub);
+		public void gitHub(Action<GitHubHandler> action) {
+			action.execute(this.gitHub);
 		}
 
 	}
@@ -474,8 +468,9 @@ public class BomExtension {
 				org.w3c.dom.Node reporting = (org.w3c.dom.Node) xpath.evaluate("/project/reporting", document,
 						XPathConstants.NODE);
 				reporting.getParentNode().removeChild(reporting);
-				TransformerFactory.newInstance().newTransformer().transform(new DOMSource(document),
-						new StreamResult(this.effectiveBom));
+				TransformerFactory.newInstance()
+					.newTransformer()
+					.transform(new DOMSource(document), new StreamResult(this.effectiveBom));
 			}
 			catch (Exception ex) {
 				throw new TaskExecutionException(task, ex);
